Спринт 16 - ShareIt - add-item-requests-and-gateway - tests - #9